kubernetes/apps/git-server/forgejo/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/component: deployment
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: forgejo
      app.kubernetes.io/instance: forgejo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forgejo
        app.kubernetes.io/instance: forgejo
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: forgejo
        image: codeberg.org/forgejo/forgejo:9.0-rootless
        imagePullPolicy: Always
        ports:
        - containerPort: 2222
          name: forgejo-ssh
          protocol: TCP
        - containerPort: 3000
          name: forgejo-http
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 200Mi
          requests:
            cpu: 50m
            memory: 64Mi
        livenessProbe:
          httpGet:
            path: /api/healthz
            port: forgejo-http
          initialDelaySeconds: 200
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 10
        volumeMounts:
        - name: temp-volume
          mountPath: /tmp/forgejo
        - name: config-volume
          mountPath: /etc/forgejo
        - name: data-volume
          mountPath: /var/lib/forgejo
      volumes:
      - name: init-volume
        secret:
          secretName: forgejo-init
          defaultMode: 110
      - name: config-scripts-volume
        secret:
          secretName: forgejo-config-scripts
          defaultMode: 110
      - name: inline-config-volume
        secret:
          secretName: forgejo-inline-config
      - name: temp-volume
        emptyDir: {}
      - name: config-volume
        persistentVolumeClaim:
          claimName: forgejo-config-pvc
      - name: data-volume
        persistentVolumeClaim:
          claimName: forgejo-data-pvc
