kubernetes/apps/git-server/forgejo/service-git-ssh.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-git-ssh
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: forgejo
  ports:
  - name: ssh
    port: 2222
    protocol: TCP
    targetPort: forgejo-git-ssh
