kubernetes/apps/git-server/forgejo/service-ssh.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  labels:
    app.kubernetes.io/name: gitea-ssh
spec:
  type: LoadBalancer
  ports:
  - name: ssh
    port: 2222
    protocol: TCP
    targetPort: 2222
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
