kubernetes/apps/git-server/forgejo/service-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-web
  labels:
    app.kubernetes.io/name: forgejo-web
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: forgejo-http
  selector:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
