kubernetes/apps/git-server/forgejo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  annotations:
    cert-manager.io/cluster-issuer: iam-demo-certs-issuer
spec:
  rules:
  - host: git.iam-demo.test
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: forgejo-web
            port:
              number: 80
  tls:
  - hosts:
    - git.iam-demo.test
    secretName: iam-demo-forgejo-tls
